--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/login.css">
     <script src=/js/login.js></script>
     <script src=/js/api.js></script>
   </head>
