--- a/public/home.html
+++ b/public/home.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <span>A social media site</span>
+      <button id="logout" onclick="api_logout()">logout</button>
     </header>
     <main>
       <div id="posts">
