--- a/public/register.html
+++ b/public/register.html
@@ -6,7 +6,7 @@
     <title>Login</title>
 
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/register.css">
+    <link rel="stylesheet" href="/css/login.css">
     <script src=/js/login.js></script>
     <script src=/js/api.js></script>
   </head>
